# lake-in-house

./: .dockerignore  .gitignore  Dockerfile  README.md  databricks_small_serverless.session.sql  docker-compose.yml  main.py  pyproject.toml
projects/csv-to-postgres-producer/: .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
projects/csv-to-postgres-producer/src/: main.py
projects/dbricks_dlt_medallion/: README.md  databricks.yml  main.py  pyproject.toml  setup.py
projects/dbricks_dlt_medallion/fixtures/: README.md
projects/dbricks_dlt_medallion/resources/: dbricks_dlt_medallion.job.yml  dbricks_dlt_medallion.pipeline.yml
projects/dbricks_dlt_medallion/src/: notebook.ipynb
projects/dbricks_dlt_medallion/src/jobs/: dlt_pipeline.ipynb
projects/dbricks_dlt_medallion/tests/: main_test.py
projects/flink-pipelines/: Dockerfile_jobmanager  Dockerfile_taskmanager  pyproject.toml
projects/flink-pipelines/samples/: 1_DataStreamAPI_CSV_no_watermark.py  2_TableAPI_CSV_batch_mode.py  3_TableAPI_Kafka_Connection.py
projects/flink-pipelines/src/: 1_DataStreamAPI_CSV_no_watermark.py  3_TableAPI_Kafka_Connection.py  deposit_pipeline.py  event_pipeline.py  hourly_transaction_amount_sum_pipeline.py  main.py  queries.fql  user_level_pipeline.py  withdrawals_pipeline.py
projects/flink-pipelines/src/fql/: deposit_cdc_queries.fql  event_cdc_queries.fql  (+3 more)
projects/python_dlt/: README.md  databricks.yml  pyproject.toml
projects/python_dlt/resources/: python_dlt.job.yml  python_dlt.pipeline.yml
projects/python_dlt/tests/: main_test.py
(+75 files in other folders)
