[project]
name = "dbricks-dlt-medallion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "spark>=0.2.1",
]

[dependency-groups]
dev = [
    "databricks-dlt>=0.3.0",
    "pip>=25.0.1",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]
